// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter renders and execute onEnd 1`] = `
<DocumentFragment>
  <div
    aria-busy="false"
    aria-live="polite"
  >
    <span>
      10
    </span>
  </div>
</DocumentFragment>
`;

exports[`Counter renders correctly end=0 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
  >
    <span>
      0
    </span>
  </div>
</DocumentFragment>
`;

exports[`Counter renders correctly end=100 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
  >
    <span>
      0
    </span>
  </div>
</DocumentFragment>
`;

exports[`Counter renders correctly end=10000 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
  >
    <span>
      0
    </span>
  </div>
</DocumentFragment>
`;
